# ILearnOpenCV

accessing_pixel/: CMakeLists.txt  README.md  accessing_method.cpp  accessingpixel_gray.cpp  change_to_gray.cpp  threshold_accesspixel.cpp
basic_graphical_user/: CMakeLists.txt  README.md  basic_gui.cpp  gui_qt.cpp  opengl_support.cpp  slider_mouse_event.cpp
basic_opencv/: CMakeLists.txt  README.md  basic_filestorage.cpp  basic_matrix_operation.cpp
color_detection/: CMakeLists.txt  README.md  color_detect_webcam.cpp  color_detection.cpp  configcolor.yml
